@@ -1,4 +1,4 @@
-#@REVISION:37
+#@REVISION:38
 #
 ## NOTE: Requires glutil 2.3.17 or higher
 #
@@ -230,7 +230,7 @@
 #
 ## -arg1 is used to select specific entries to edit
 #
-#@MACRO:dirlog-edit|Edit dirlog with your default text editor [-arg1=<edit-only regex>] [-arg2=<extra arguments>]:{m:exe} noop silent --preexec `if ! {m:exe} -q dirlog --dirlog={m:q:dirlog@file} iregexi "{m:arg1}" {m:arg2} --nofq silent; then echo "ERROR: nothing found"; exit 1; fi; {m:exe} -q dirlog -E {m:arg2} --dirlog={m:q:dirlog@file} iregexi "{m:arg1}" > /tmp/glutil.ef.$$ ; csum() { cat "$1" | md5sum | cut -f 1 -d " "; } ; osum=$(csum /tmp/glutil.ef.$$); [ -z "$EDITOR" ] && EDITOR="vi"; $EDITOR /tmp/glutil.ef.$$; if ! echo "$osum" | egrep -q "^$(csum /tmp/glutil.ef.$$)$"; then {m:exe} --dirlog={m:q:dirlog@file} --backup dirlog -v && {m:exe} -e dirlog --nobackup --dirlog={m:q:dirlog@file} -ff --nofq {m:arg2} regexi "{m:arg1}" silent && {m:exe} -z dirlog --nobackup --dirlog={m:q:dirlog@file} -vvvv < /tmp/glutil.ef.$$ || echo "ERROR: could not write record"; fi; rm /tmp/glutil.ef.$$`
-#@MACRO:tvrage-edit|Edit tvlog with your default text editor [-arg1=<edit-only regex>] [-arg2=<extra arguments>]:{m:exe} noop silent --preexec `if ! {m:exe} -q tvrage --tvlog={m:q:tvrage@file}  iregexi "{m:arg1}" {m:arg2} --nofq silent; then echo "ERROR: nothing found"; exit 1; fi; {m:exe} -q tvrage -E {m:arg2} --tvlog={m:q:tvrage@file} iregexi "{m:arg1}" > /tmp/glutil.ef.$$ ; csum() { cat "$1" | md5sum | cut -f 1 -d " "; } ; osum=$(csum /tmp/glutil.ef.$$); [ -z "$EDITOR" ] && EDITOR="vi"; $EDITOR /tmp/glutil.ef.$$; if ! echo "$osum" | egrep -q "^$(csum /tmp/glutil.ef.$$)$"; then {m:exe} --tvlog={m:q:tvrage@file} --backup tvrage -v && {m:exe} -e tvrage --nobackup --tvlog={m:q:tvrage@file} -ff --nofq {m:arg2} regexi "{m:arg1}" silent && {m:exe} --nobackup --tvlog={m:q:tvrage@file} -z tvrage -vvvv < /tmp/glutil.ef.$$ || echo "ERROR: could not write record"; fi; rm /tmp/glutil.ef.$$`
-#@MACRO:imdb-edit|Edit imdblog with your default text editor [-arg1=<edit-only regex>] [-arg2=<extra arguments>]:{m:exe} noop silent --preexec `if ! {m:exe}  -q imdb --imdblog={m:q:imdb@file} iregexi "{m:arg1}" {m:arg2} --nofq silent; then echo "ERROR: nothing found"; exit 1; fi; {m:exe} -q imdb -E {m:arg2} --imdblog={m:q:imdb@file} iregexi "{m:arg1}" > /tmp/glutil.ef.$$ ; csum() { cat "$1" | md5sum | cut -f 1 -d " "; } ; osum=$(csum /tmp/glutil.ef.$$); [ -z "$EDITOR" ] && EDITOR="vi"; $EDITOR /tmp/glutil.ef.$$; if ! echo "$osum" | egrep -q "^$(csum /tmp/glutil.ef.$$)$"; then {m:exe} --imdblog={m:q:imdb@file} --backup imdb -v && {m:exe} -e imdb --nobackup --imdblog={m:q:imdb@file} -ff --nofq {m:arg2} regexi "{m:arg1}" silent && {m:exe} -z imdb --nobackup --imdblog={m:q:imdb@file} -vvvv < /tmp/glutil.ef.$$ || echo "ERROR: could not write record"; fi; rm /tmp/glutil.ef.$$`
+#@MACRO:dirlog-edit|Edit dirlog with your default text editor [-arg1=<edit-only regex>] [-arg2=<extra arguments>]:{m:exe} noop silent --preexec `if ! {m:exe} -q dirlog --dirlog={m:q:dirlog@file} iregexi "{m:arg1}" {m:arg2} --nofq silent; then echo "ERROR: nothing found"; exit 1; fi; {m:exe} -q dirlog -E {m:arg2} --dirlog={m:q:dirlog@file} iregexi "{m:arg1}" > /tmp/glutil.ef.$$ ; csum() { cat "$1" | md5sum | cut -f 1 -d " "; } ; osum=$(csum /tmp/glutil.ef.$$); [ -z "$EDITOR" ] && EDITOR="vi"; $EDITOR /tmp/glutil.ef.$$; if ! echo "$osum" | egrep -q "^$(csum /tmp/glutil.ef.$$)$"; then {m:exe} --dirlog={m:q:dirlog@file} --backup dirlog -v && {m:exe} -e dirlog --nobackup --dirlog={m:q:dirlog@file} -ff --nofq {m:arg2} regexi "{m:arg1}" silent && {m:exe} -z dirlog --nobackup --dirlog={m:q:dirlog@file} -vvvv {m:arg2} < /tmp/glutil.ef.$$ || echo "ERROR: could not write record"; fi; rm /tmp/glutil.ef.$$`
+#@MACRO:tvrage-edit|Edit tvlog with your default text editor [-arg1=<edit-only regex>] [-arg2=<extra arguments>]:{m:exe} noop silent --preexec `if ! {m:exe} -q tvrage --tvlog={m:q:tvrage@file}  iregexi "{m:arg1}" {m:arg2} --nofq silent; then echo "ERROR: nothing found"; exit 1; fi; {m:exe} -q tvrage -E {m:arg2} --tvlog={m:q:tvrage@file} iregexi "{m:arg1}" > /tmp/glutil.ef.$$ ; csum() { cat "$1" | md5sum | cut -f 1 -d " "; } ; osum=$(csum /tmp/glutil.ef.$$); [ -z "$EDITOR" ] && EDITOR="vi"; $EDITOR /tmp/glutil.ef.$$; if ! echo "$osum" | egrep -q "^$(csum /tmp/glutil.ef.$$)$"; then {m:exe} --tvlog={m:q:tvrage@file} --backup tvrage -v && {m:exe} -e tvrage --nobackup --tvlog={m:q:tvrage@file} -ff --nofq {m:arg2} regexi "{m:arg1}" silent && {m:exe} --nobackup --tvlog={m:q:tvrage@file} -z tvrage -vvvv {m:arg2} < /tmp/glutil.ef.$$ || echo "ERROR: could not write record"; fi; rm /tmp/glutil.ef.$$`
+#@MACRO:imdb-edit|Edit imdblog with your default text editor [-arg1=<edit-only regex>] [-arg2=<extra arguments>]:{m:exe} noop silent --preexec `if ! {m:exe}  -q imdb --imdblog={m:q:imdb@file} iregexi "{m:arg1}" {m:arg2} --nofq silent; then echo "ERROR: nothing found"; exit 1; fi; {m:exe} -q imdb -E {m:arg2} --imdblog={m:q:imdb@file} iregexi "{m:arg1}" > /tmp/glutil.ef.$$ ; csum() { cat "$1" | md5sum | cut -f 1 -d " "; } ; osum=$(csum /tmp/glutil.ef.$$); [ -z "$EDITOR" ] && EDITOR="vi"; $EDITOR /tmp/glutil.ef.$$; if ! echo "$osum" | egrep -q "^$(csum /tmp/glutil.ef.$$)$"; then {m:exe} --imdblog={m:q:imdb@file} --backup imdb -v && {m:exe} -e imdb --nobackup --imdblog={m:q:imdb@file} -ff --nofq {m:arg2} regexi "{m:arg1}" silent && {m:exe} -z imdb --nobackup --imdblog={m:q:imdb@file} -vvvv {m:arg2} < /tmp/glutil.ef.$$ || echo "ERROR: could not write record"; fi; rm /tmp/glutil.ef.$$`
 #
